--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,6 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  max-width: 100%;
-}
-
-html,
-body {
-  font-family: "Ubuntu", sans-serif;
-  color: #5e6164;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 .App {
   font-family: sans-serif;
   text-align: center;
-  height: 100%;
-  width: 100%;
 }
 
 .App-logo {
@@ -46,6 +23,12 @@ img {
   font-size: calc(10px + 2vmin);
   color: white;
 }
+#root {
+  width: 100vw;
+  height: 100vh;
+  color: #2a2223;
+  margin: 0;
+}
 .App nav {
   height: 4rem;
   display: flex;
@@ -56,6 +39,13 @@ img {
 }
 .header img {
   width: 50%;
+}
+.member {
+  display: grid;
+  grid-gap: 1px;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  margin: 10px auto;
+  max-width: 1200px;
 }
 
 .nav-links {
