--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 16px;
+
+  margin-right: 5rem;
   border-bottom: 1px solid #efefef;
 }
 .header img {
@@ -45,7 +46,7 @@
   grid-gap: 1px;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   margin: 10px auto;
-  max-width: 1200px;
+  max-width: 1100px;
 }
 
 .nav-links {
