--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,17 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,13 +22,13 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-#root {
+} */
+/* #root {
   width: 100vw;
   height: 100vh;
   color: #2a2223;
   margin: 0;
-}
+} */
 .App nav {
   height: 4rem;
   display: flex;
@@ -60,21 +60,21 @@
   align-items: center;
 }
 
-.home-image {
+/* .home-image {
   width: 100%;
   max-height: 100wh;
   object-fit: cover;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
